add assets folder

--- a/index.html
+++ b/index.html
@@ -332,7 +332,9 @@
 
         <aside class="hero-card">
           <div class="profile">
-            <div class="avatar">AP</div>
+            <div class="avatar">
+              <img src="avatar.png" alt="Apip" style="width:48px;height:48px;border-radius:10px;" />
+            </div>
             <div>
               <strong>Apip</strong><br>
               <small style="color:var(--muted)">UI/UX • Frontend • Branding</small>
