--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
         <aside class="hero-card">
           <div class="profile">
             <div class="avatar">
-              <img src="avatar.png" alt="Apip" style="width:48px;height:48px;border-radius:10px;" />
+              <img src="avatar/avatar web.jpeg" alt="Apip" style="width:48px;height:48px;border-radius:10px;object-fit:cover" />
             </div>
             <div>
               <strong>Apip</strong><br>
