Update hero text

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
         </div>
         <div>
           <strong>Afif Shalahuddin</strong><br>
-          <small style="color:var(--muted)">Designer • Frontend Developer</small>
+          <small style="color:var(--muted)">Designer • Programmer </small>
         </div>
       </div>
       <nav>
@@ -322,11 +322,11 @@
     <main>
       <section class="hero">
         <div>
-          <h1 class="typewriter" data-text="WELCOME TO MY PORTOFOLIO!!"></h1>
-          <p>Saya Afif Shalahuddin dari Makassar. Fokus pada desain minimalis, UI/UX, dan frontend modern yang bersih serta fungsional.</p>
+          <h1 class="typewriter" data-text="HALO SEMUA,WELCOME MY PORTOFOLIO!!"></h1>
+          <p>Perkenalkan,Saya Afif Shalahuddin berasal dari Makassar.Saat ini saya Fokus pada desain-desain minimalis dan mempelajari lebih dalam di dunia IT.</p>
           <div class="hero-actions">
-            <button onclick="location.href='#projects'">See Projects</button>
-            <button onclick="location.href='#contact'">Hire Me</button>
+            <button onclick="location.href='#projects'">Lihat Projek Saya</button>
+            <button onclick="location.href='#contact'">Hubungi Saya</button>
           </div>
         </div>
 
@@ -337,10 +337,10 @@
             </div>
             <div>
               <strong>Apip</strong><br>
-              <small style="color:var(--muted)">UI/UX • Frontend • Branding</small>
+              <small style="color:var(--muted)">Student • Santri • Gamer </small>
             </div>
           </div>
-          <p style="margin-top:14px;color:var(--muted)">Available for freelance & full‑time work. Based in Indonesia.</p>
+          <p style="margin-top:14px;color:var(--muted)">Sekarang saya menempuh pendidikan di UIN Sunan Gunung Djati Bandung Jurusan Teknik Informstika.</p>
         </aside>
       </section>
 
