--- a/index.html
+++ b/index.html
@@ -322,8 +322,8 @@
     <main>
       <section class="hero">
         <div>
-          <h1 class="typewriter" data-text="HALO SEMUA,WELCOME MY PORTOFOLIO!!"></h1>
-          <p>Perkenalkan,Saya Afif Shalahuddin berasal dari Makassar.Saat ini saya Fokus pada desain-desain minimalis dan mempelajari lebih dalam di dunia IT.</p>
+          <h1 class="typewriter" data-text="HALOO,WELCOME MY PORTOFOLIO!!"></h1>
+          <p>Perkenalkan,Saya Afif Shalahuddin biasa sering dipanggil apip berasal dari Makassar.Saat ini saya Fokus pada desain-desain minimalis dan mempelajari lebih dalam di dunia IT.</p>
           <div class="hero-actions">
             <button onclick="location.href='#projects'">Lihat Projek Saya</button>
             <button onclick="location.href='#contact'">Hubungi Saya</button>
