Update text content

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
     <main>
       <section class="hero">
         <div>
-          <h1 class="typewriter" data-text="HALOO,WELCOME MY PORTOFOLIO!!"></h1>
+          <h1 class="typewriter" data-text="HALO,WELCOME MY PORTOFOLIO!!"></h1>
           <p>Perkenalkan,Saya Afif Shalahuddin biasa sering dipanggil apip berasal dari Makassar.Saat ini saya Fokus pada desain-desain minimalis dan mempelajari lebih dalam di dunia IT.</p>
           <div class="hero-actions">
             <button onclick="location.href='#projects'">Lihat Projek Saya</button>
