Update hero description text

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
               <small style="color:var(--muted)">Student • Santri • Gamer </small>
             </div>
           </div>
-          <p style="margin-top:14px;color:var(--muted)">Sekarang saya menempuh pendidikan di UIN Sunan Gunung Djati Bandung Jurusan Teknik Informstika.</p>
+          <p style="margin-top:14px;color:var(--muted)">Sekarang saya menempuh pendidikan di UIN Sunan Gunung Djati Bandung Jurusan Teknik Informatika.</p>
         </aside>
       </section>
 
