--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
             </div>
             <div>
               <strong>Apip</strong><br>
-              <small style="color:var(--muted)">Student • Santri • Gamer </small>
+              <small style="color:var(--muted)">Student • Santri • Gamers </small>
             </div>
           </div>
           <p style="margin-top:14px;color:var(--muted)">Sekarang saya menempuh pendidikan di UIN Sunan Gunung Djati Bandung Jurusan Teknik Informatika.</p>
