Revise portfolio introduction and project sections
Updated portfolio content and project descriptions for clarity and detail.

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
     <main>
       <section class="hero">
         <div>
-          <h1 class="typewriter" data-text="HALO,WELCOME MY PORTOFOLIO!!"></h1>
+          <h1 class="typewriter" data-text="HELLO,WELCOME MY PORTOFOLIO!!"></h1>
           <p>Perkenalkan,Saya Afif Shalahuddin biasa sering dipanggil apip berasal dari Makassar.Saat ini saya Fokus pada desain-desain minimalis dan mempelajari lebih dalam di dunia IT.</p>
           <div class="hero-actions">
             <button onclick="location.href='#projects'">Lihat Projek Saya</button>
@@ -337,24 +337,24 @@
             </div>
             <div>
               <strong>Apip</strong><br>
-              <small style="color:var(--muted)">Student • Santri • Gamers </small>
+              <small style="color:var(--muted)">Student • Gamers </small>
             </div>
           </div>
-          <p style="margin-top:14px;color:var(--muted)">Sekarang saya menempuh pendidikan di UIN Sunan Gunung Djati Bandung Jurusan Teknik Informatika.</p>
+          <p style="margin-top:14px;color:var(--muted)">Saya merupakan mahasiswa Teknik Informatika di UIN Sunan Gunung Djati Bandung yang tertarik pada dunia IT, desain grafis, dan editing konten digital. Saya fokus mengembangkan kemampuan dalam desain minimalis, editing visual, serta pengelolaan konten kreatif. Bagi saya, teknologi dan kreativitas adalah kombinasi utama dalam menciptakan solusi digital yang menarik dan fungsional.</p>
         </aside>
       </section>
 
       <section id="projects">
-        <h2>Selected Projects</h2>
+        <h2>Projek saya</h2>
         <div class="grid">
           <article class="card">
-            <div class="thumb">Portfolio Website</div>
-            <h3>Personal Portfolio</h3>
-            <p style="color:var(--muted)">Fast, minimal, and typography‑driven.</p>
-            <div class="tags"><span class="tag">HTML</span><span class="tag">CSS</span></div>
+            <div class="thumb"><img src="images/profil design.jpg" alt="Personal Portfolio" /></div>
+            <h3>Desain Grafis</h3>
+            <p style="color:var(--muted)">Desain grafis cepat dengan pendekatan minimal dan fokus pada detail.</p>
+            <div class="tags"><span class="tag">FIGMA</span><span class="tag">CANVA</span></div>
           </article>
           <article class="card">
-            <div class="thumb">Brand Identity</div>
+            <div class="thumb"><img src="images/profil code.jpg" alt="Brand System" /></div>
             <h3>Brand System</h3>
             <p style="color:var(--muted)">Monochrome branding & logo system.</p>
             <div class="tags"><span class="tag">Branding</span><span class="tag">Design</span></div>
