--- a/index.html
+++ b/index.html
@@ -151,12 +151,13 @@
     }
     .card:hover{transform:translateY(-6px)}
 
-    .thumb{
-      height:140px;border-radius:10px;margin-bottom:12px;
-      background:linear-gradient(45deg,#0b0b0b,#1a1a1a);
-      display:flex;align-items:center;justify-content:center;
-      color:var(--muted);font-size:14px
-    }
+    .thumb img{
+  width:100%;
+  height:100%;
+  object-fit:cover;   /* KUNCI KERAPIHAN */
+  border-radius:10px;
+}
+
 
     .tags{display:flex;gap:8px;flex-wrap:wrap}
     .tag{font-size:12px;padding:6px 8px;border-radius:999px;border:1px solid rgba(255,255,255,.08);color:var(--muted)}
