--- a/index.html
+++ b/index.html
@@ -151,12 +151,19 @@
     }
     .card:hover{transform:translateY(-6px)}
 
-    .thumb img{
-  width:100%;
-  height:100%;
-  object-fit:cover;   /* KUNCI KERAPIHAN */
-  border-radius:10px;
+   .thumb{
+  aspect-ratio: 1 / 1;   /* KUNCI BIAR KOTAK */
+  width: 100%;
+  border-radius: 12px;
+  margin-bottom: 12px;
+  overflow: hidden;
+
+  background: linear-gradient(45deg,#0b0b0b,#1a1a1a);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
 
 
     .tags{display:flex;gap:8px;flex-wrap:wrap}
