--- a/index.html
+++ b/index.html
@@ -151,20 +151,16 @@
     }
     .card:hover{transform:translateY(-6px)}
 
-   .thumb{
-  aspect-ratio: 1 / 1;   /* KUNCI BIAR KOTAK */
+ .thumb{
+  aspect-ratio: 1 / 1;
   width: 100%;
-  border-radius: 12px;
+  max-width: 220px;     /* BATAS UKURAN */
   margin-bottom: 12px;
+  border-radius: 12px;
   overflow: hidden;
 
   background: linear-gradient(45deg,#0b0b0b,#1a1a1a);
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
-
-
 
     .tags{display:flex;gap:8px;flex-wrap:wrap}
     .tag{font-size:12px;padding:6px 8px;border-radius:999px;border:1px solid rgba(255,255,255,.08);color:var(--muted)}
