--- a/index.html
+++ b/index.html
@@ -151,16 +151,16 @@
     }
     .card:hover{transform:translateY(-6px)}
 
- .thumb{
-  aspect-ratio: 1 / 1;
+.thumb{
   width: 100%;
-  max-width: 220px;     /* BATAS UKURAN */
-  margin-bottom: 12px;
+  aspect-ratio: 16 / 9;   /* PERSEGI PANJANG */
   border-radius: 12px;
+  margin-bottom: 12px;
   overflow: hidden;
 
   background: linear-gradient(45deg,#0b0b0b,#1a1a1a);
 }
+
 
     .tags{display:flex;gap:8px;flex-wrap:wrap}
     .tag{font-size:12px;padding:6px 8px;border-radius:999px;border:1px solid rgba(255,255,255,.08);color:var(--muted)}
