Refactor CSS styles for .thumb class

--- a/index.html
+++ b/index.html
@@ -153,13 +153,17 @@
 
 .thumb{
   width: 100%;
-  aspect-ratio: 16 / 9;   /* PERSEGI PANJANG */
+  aspect-ratio: 16 / 9;     /* persegi panjang */
   border-radius: 12px;
-  margin-bottom: 12px;
   overflow: hidden;
+  margin-bottom: 12px;
 
-  background: linear-gradient(45deg,#0b0b0b,#1a1a1a);
+  background-color: #111;  /* background kalau ada sisa ruang */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
 
 
     .tags{display:flex;gap:8px;flex-wrap:wrap}
