Update skills and project tags in index.html

--- a/index.html
+++ b/index.html
@@ -359,13 +359,13 @@
             <div class="thumb"><img src="images/profil design.jpg" alt="Personal Portfolio" /></div>
             <h3>Desain Grafis</h3>
             <p style="color:var(--muted)">Desain grafis cepat dengan pendekatan minimal dan fokus pada detail.</p>
-            <div class="tags"><span class="tag">FIGMA</span><span class="tag">CANVA</span></div>
+            <div class="tags"><span class="tag">FIGMA</span><span class="tag">CANVA</span><span class="tag">Powepoint</span><div>
           </article>
           <article class="card">
             <div class="thumb"><img src="images/profil code.jpg" alt="Brand System" /></div>
-            <h3>Brand System</h3>
-            <p style="color:var(--muted)">Monochrome branding & logo system.</p>
-            <div class="tags"><span class="tag">Branding</span><span class="tag">Design</span></div>
+            <h3>Programmer</h3>
+            <p style="color:var(--muted)">Desain tampilan sederhana untuk website dan aplikasi.</p>
+            <div class="tags"><span class="tag">CPP</span><span class="tag">HTML</span><span class="tag">PYTHON</span></div>
           </article>
         </div>
       </section>
@@ -375,7 +375,7 @@
         <div class="skills">
           <span class="skill"><i class="fab fa-html5"></i> HTML</span>
           <span class="skill"><i class="fab fa-css3-alt"></i> CSS</span>
-          <span class="skill"><i class="fab fa-js"></i> JavaScript</span>
+          <span class="skill"><i class="fab fa-js"></i> JavaScr</span>
           <span class="skill"><i class="fab fa-react"></i> React</span>
           <span class="skill"><i class="fab fa-figma"></i> Figma</span>
         </div>
