Add Python and Canva skills to index.html

--- a/index.html
+++ b/index.html
@@ -375,9 +375,10 @@
         <div class="skills">
           <span class="skill"><i class="fab fa-html5"></i> HTML</span>
           <span class="skill"><i class="fab fa-css3-alt"></i> CSS</span>
-          <span class="skill"><i class="fab fa-js"></i> JavaScr</span>
-          <span class="skill"><i class="fab fa-react"></i> React</span>
+          <span class="skill"><i class="fab fa-python"></i> Python</span>
+          <span class="skill"><i class="fab fa-Canva"></i> Canva</span>
           <span class="skill"><i class="fab fa-figma"></i> Figma</span>
+          <span class="skill"><i class="fas fa-powerpoint"></i> Powerpoint</span>
         </div>
       </section>
 
