Add Iconify script and update skill icons

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="id">
 <head>
+  <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Afif Shalahuddin — Portfolio</title>
@@ -376,9 +377,19 @@
           <span class="skill"><i class="fab fa-html5"></i> HTML</span>
           <span class="skill"><i class="fab fa-css3-alt"></i> CSS</span>
           <span class="skill"><i class="fab fa-python"></i> Python</span>
-          <span class="skill"><i class="fab fa-Canva"></i> Canva</span>
           <span class="skill"><i class="fab fa-figma"></i> Figma</span>
-          <span class="skill"><i class="fas fa-powerpoint"></i> Powerpoint</span>
+         <span class="skill">
+          <i class="fab fa-figma"></i> Figma
+        </span>
+
+        <span class="skill">
+          <span class="iconify" data-icon="simple-icons:canva"></span> Canva
+        </span>
+
+        <span class="skill">
+         <span class="iconify" data-icon="simple-icons:microsoftpowerpoint"></span> PowerPoint
+        </span>
+
         </div>
       </section>
 
