--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
         <h2>Skills & Tools</h2>
         <div class="skills">
           <span class="skill"><i class="fab fa-html5"></i> HTML</span>
-          <span class="skill"><i class="fab fa-css3-alt"></i> CSS</span>
+          <span class="skill"><i class="fab fa-c"></i> CPP</span>
           <span class="skill"><i class="fab fa-python"></i> Python</span>
           <span class="skill"><i class="fab fa-figma"></i> Figma</span>
          <span class="skill">
