Update student description from 'Gamers' to 'Scout'

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
             </div>
             <div>
               <strong>Apip</strong><br>
-              <small style="color:var(--muted)">Student • Gamers </small>
+              <small style="color:var(--muted)">Student • Scout </small>
             </div>
           </div>
           <p style="margin-top:14px;color:var(--muted)">Saya merupakan mahasiswa Teknik Informatika di UIN Sunan Gunung Djati Bandung yang tertarik pada dunia IT, desain grafis, dan editing konten digital. Saya fokus mengembangkan kemampuan dalam desain minimalis, editing visual, serta pengelolaan konten kreatif. Bagi saya, teknologi dan kreativitas adalah kombinasi utama dalam menciptakan solusi digital yang menarik dan fungsional.</p>
