Fix contact information and update CPP icon

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
         <h2>Skills & Tools</h2>
         <div class="skills">
           <span class="skill"><i class="fab fa-html5"></i> HTML</span>
-          <span class="skill"><i class="fab fa-c"></i> CPP</span>
+          <span class="skill"><i class="fab fa-c+"></i> CPP</span>
           <span class="skill"><i class="fab fa-python"></i> Python</span>
           <span class="skill"><i class="fab fa-figma"></i> Figma</span>
          <span class="skill">
@@ -397,7 +397,10 @@
         <h2>Contact</h2>
         <div class="contact">
           <div class="card">
-            <p>Email: <strong>apip@example.com</strong></p>
+            <p>Email: <strong>afifshalahuddin24@gmail.com</strong></p>
+            <p>Instagram: <strong>@apipshdn_</strong>
+            <p>WhatsApp: <strong>081341155376</strong>
+            <p>Linkidn: <storng>Afif Shalahuddin</storng>
             <p>Indonesia</p>
           </div>
           <form class="card" onsubmit="event.preventDefault();alert('Demo form');">
