--- a/index.html
+++ b/index.html
@@ -403,11 +403,7 @@
             <p>Linkidn: <storng>Afif Shalahuddin</storng>
             <p>Indonesia</p>
           </div>
-       <form
-          class="card"
-          action="https://formsubmit.co/afifshalahuddin24@gmail.com"
-          method="POST"
-      >
+      <form action="https://formsubmit.co/afifshalahuddin24@gmail.com" method="POST">
 
           <input type="hidden" name="_subject" value="Pesan dari Website Portfolio">
           <input type="hidden" name="_captcha" value="false">
